fix overflow

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ hr {
 
 .entry {
   clear: both;
-  padding-bottom: 0.45em;
+  padding-bottom: 0.4em;
 }
 
 .title {
